@@ -17,6 +17,7 @@
  * Using latest QueryBuilder (fixes default scope bug).
  * Added 'ssl_on_auth' option to force https after (and during) login. <=== TODO: Document
  * Removing evaluated strings if copy_id is blank.
+ * Exporting relations by class name instead of kpath (may differ from site to site).
 
 == 1.2.0, 1.2.1 2012-05-01
 
